# django-staticsite-example

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
django-staticsite-example/: README.md  demoblog.sqlite3  manage.py
django-staticsite-example/blog/: urls.py
django-staticsite-example/blog/templates/: base.html
django-staticsite-example/demoblog/: asgi.py  settings.py  urls.py
docs/: index.html
docs/post/: another-test-post.html  post-all-tags.html  test-post.html
docs/tag/: a-tag.html  another-tag.html  example.html  staticsite.html
